--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "hjs": "0.0.6",
+    "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
-    "nodemon": "^1.18.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
